--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validation": "^4.1.1",
+    "http-status": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
   }
 }
