--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.1",
     "express-validation": "^4.1.1",
     "http-status": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -21,6 +21,9 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "paypal-rest-sdk": "^1.8.1",
+    "stripe": "^17.3.1",
+    "uuid": "^11.0.2"
   }
 }
